# nasubot

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: lib.rs  main.rs  notice.rs  pcstatus.rs
test/: config-windows.json
