[package]
name = "nasubot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.23", features = ["derive", "env"]}
env_logger = "0.11.6"
log = "0.4.22"
reqwest = {version = "0.12.11",  default-features = false, features = [
    "rustls-tls",
    "json",
]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.33.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
